--- a/_sass/basically-basic/_sidebar.scss
+++ b/_sass/basically-basic/_sidebar.scss
@@ -35,7 +35,7 @@ $background-color: #fff; // Pure white
     }
     // Add more breakpoints as needed
 }
-
+// ... (Same variables and mixins as Option 1) ...
 
 .sidebar {
   position: fixed;
@@ -45,28 +45,28 @@ $background-color: #fff; // Pure white
   height: 100%;
   z-index: 50;
   background-color: $sidebar-background-color;
-  overflow-y: auto;  // VERY IMPORTANT: Allow vertical scrolling
   overflow-x: hidden;
   box-shadow: inset -1em 0 5em 0 rgba(0, 0, 0, 0.125);
-    transform: translateY(100vh);   // Start below the viewport
-    transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1), visibility 0s 0.6s; // "easeOutExpo" - fast then slow and then fast again
-    visibility: hidden;
+  transform: translate(-100%, -100%) scale(0.5); // Start off-screen, top-left, and scaled down
+  transform-origin: top left; // Important for the animation
+  transition: transform $animation-duration $easing-curve, visibility 0s $animation-duration;
+  visibility: hidden;
 
   &.is--visible {
-      transform: translateY(0);  // Slide up to the top of the viewport
-      transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1), visibility 0s 0s;
-      visibility: visible;
+    transform: translate(0, 0) scale(1); // Move to the correct position and scale up
+    transition: transform $animation-duration $easing-curve, visibility 0s 0s;
+    visibility: visible;
   }
 
   // ... (Rest of the styles, including .close-button, li, .menu, etc. - same as Option 1 ) ...
-  .sidebar.is--visible li {
-    // This applies the staggered delay. VERY IMPORTANT.
-    @for $i from 1 through 20 { // Assuming you won't have > 20 items. Adjust as needed.
-      &:nth-child(#{$i}) {
-          transition-delay: #{($animation-delay * ($i - 1)) + 0.4s}; //add an additional delay to allow the menu to slide in first
+    .sidebar.is--visible li {
+      // This applies the staggered delay. VERY IMPORTANT.
+      @for $i from 1 through 20 { // Assuming you won't have > 20 items. Adjust as needed.
+        &:nth-child(#{$i}) {
+          transition-delay: #{($animation-delay * ($i - 1)) + 0.2s}; //add an additional delay to allow the menu to slide in first
         }
+      }
     }
-  }
 }
 //open button
 .sidebar-toggle-wrapper {
