--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--
-    Basically Basic Jekyll Theme 1.4.5
-    Copyright 2017-2018 Michael Rose - mademistakes.com | @mmistakes
-    Free for personal and commercial use under the MIT license
-    https://github.com/mmistakes/jekyll-theme-basically-basic/blob/master/LICENSE
--->
+
 <html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="no-js">
   {% include head.html %}
 
@@ -54,5 +49,17 @@
     {% include scripts.html %}
 
   </body>
-
+  <!-- 
+    This theme and site is a fork of the Basically Basic Theme. 
+    It is modified by Ray Kooyenga and can be seen at rkooyenga.github.io
+    this fork is in no way endorsed by the original author and any warranties 
+    they may claim are not voided here. Ray Kooyenga makes exactly no warranties
+    it's just a hobby project
+  -->  
+  <!--
+    Basically Basic Jekyll Theme 1.4.5
+    Copyright 2017-2018 Michael Rose - mademistakes.com | @mmistakes
+    Free for personal and commercial use under the MIT license
+    https://github.com/mmistakes/jekyll-theme-basically-basic/blob/master/LICENSE
+  -->
 </html>
