--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
   </body>
   <!-- 
     This theme and site is a fork of the Basically Basic Theme. 
-    It is modified by Ray Kooyenga and can be seen at rkooyenga.github.io
+    It is modified by Ray Kooyenga for rkooyenga.github.io
     this fork is in no way endorsed by the original author and any warranties 
     they may claim are not voided here. Ray Kooyenga makes exactly no warranties
     it's just a hobby project
