--- a/_sass/basically-basic/themes/_raykooyenga.scss
+++ b/_sass/basically-basic/themes/_raykooyenga.scss
@@ -8,6 +8,25 @@ $border-color: rgba($text-color, 0.25) !default;
 $overlay-color: #fff !default;
 
 /* Syntax highlighting (base16) colors */
+$base00: #ffffff !default;
+$base01: #f5f5f5 !default;
+$base02: #c8c8fa !default;
+$base03: #969896 !default;
+$base04: #e8e8e8 !default;
+$base05: #333333 !default;
+$base06: #ffffff !default;
+$base07: #ffffff !default;
+$base08: #ed6a43 !default;
+$base09: #0086b3 !default;
+$base0A: #795da3 !default;
+$base0B: #183691 !default;
+$base0C: #183691 !default;
+$base0D: #795da3 !default;
+$base0E: #a71d5d !default;
+$base0F: #333333 !default; 
+
+
+/* Syntax highlighting (base16) colors previous
 $base00: #1d1f21 !default;
 $base01: #282a2e !default;
 $base02: #373b41 !default;
@@ -24,3 +43,4 @@ $base0c: #8abeb7 !default;
 $base0d: #81a2be !default;
 $base0e: #b294bb !default;
 $base0f: #a3685a !default;
+*/
