--- a/_sass/basically-basic/themes/_raykooyenga.scss
+++ b/_sass/basically-basic/themes/_raykooyenga.scss
@@ -8,22 +8,24 @@ $border-color: rgba($text-color, 0.25) !default;
 $overlay-color: #fff !default;
 
 /* Syntax highlighting (base16) colors */
-$base00: #ffffff !default;
-$base01: #f5f5f5 !default;
-$base02: #c8c8fa !default;
-$base03: #969896 !default;
-$base04: #e8e8e8 !default;
-$base05: #333333 !default;
-$base06: #ffffff !default;
-$base07: #ffffff !default;
-$base08: #ed6a43 !default;
-$base09: #0086b3 !default;
-$base0A: #795da3 !default;
-$base0B: #183691 !default;
-$base0C: #183691 !default;
-$base0D: #795da3 !default;
-$base0E: #a71d5d !default;
-$base0F: #333333 !default; 
+/* Syntax highlighting (base16) colors - Vibrant High Contrast (Terminal Inspired) */
+$base00: #ffffff !default; // White
+$base01: #F1EFEE !default; // Off-White
+$base02: #9C9491 !default; // Light Grey
+$base03: #68615E !default; // Medium Grey/Brown
+$base04: #68615E !default; // Medium Grey/Brown
+$base05: #1B1918 !default; // Very Dark Brown/Black
+$base06: #1B1918 !default; // Very Dark Brown/Black
+$base07: #1B1918 !default; // Very Dark Brown/Black
+$base08: #F22C40 !default; // Red
+$base09: #f9751d !default; // Orange
+$base0A: #C38418 !default; // Yellow/Orange
+$base0B: #7B9726 !default; // Green
+$base0C: #3D97B8 !default; // Cyan
+$base0D: #407EE7 !default; // Blue
+$base0E: #6666EA !default; // Magenta/Purple
+$base0F: #874f1d !default; // Brown
+
 
 
 /* Syntax highlighting (base16) colors previous
