--- a/_sass/basically-basic/_variables.scss
+++ b/_sass/basically-basic/_variables.scss
@@ -5,8 +5,9 @@
 /* Breakpoint widths */
 $small: 320px !default;
 $medium: 768px !default;
-$large: 1024px !default;
-$xlarge: 1280px !default;
+/* $large: 1024 !default; */
+$large: 1280px !default;
+$xlarge: 1920px !default;
 
 /* Fluid type */
 $base-font-size: 16px !default;
