--- a/_sass/basically-basic/themes/_raykooyenga.scss
+++ b/_sass/basically-basic/themes/_raykooyenga.scss
@@ -8,7 +8,10 @@ $border-color: rgba($text-color, 0.25) !default;
 $overlay-color: #fff !default;
 
 /* minima and variants are too slim in text layout, not ideal for modern screens */
-$content-width: 85%, 1920px !default;
+/* $content-width: 90% !default; */
+$content-width: 100%; !default;
+$xlarge: 1920px !default;
+$max-width: 1920px !default;
 
 /* Syntax highlighting (base16) colors */
 /* Syntax highlighting (base16) colors - Vibrant High Contrast (Terminal Inspired) */
