--- a/_sass/basically-basic/themes/_raykooyenga.scss
+++ b/_sass/basically-basic/themes/_raykooyenga.scss
@@ -9,7 +9,7 @@ $overlay-color: #fff !default;
 
 /* minima and variants are too slim in text layout, not ideal for modern screens */
 /* $content-width: 90% !default; */
-$content-width: 100%; !default;
+$content-width: 100% !default;
 $xlarge: 1920px !default;
 $max-width: 1920px !default;
 
