--- a/_sass/basically-basic/_variables.scss
+++ b/_sass/basically-basic/_variables.scss
@@ -78,6 +78,7 @@ $base0f: #c79595 !default;
 
 /* Max-width of the main content */
 $main-max-width: $xlarge !default;
+$main-max-width: 100% !default;
 
 /* Width of the sidebar */
 $sidebar-width: $small !default;
